2002-11-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03471] Re: SETPGRP()
	* configure: SETPGRP() always defined
	* proto.h (close_all_fds): added
		(myExec): #ifdef HAVE_SETPGRP
	* etc.c (close_all_fds): added
		(myExec): #ifdef HAVE_SETPGRP
		(mySystem): #ifndef -> #ifdef
	* file.c (_doFileCopy): delete #ifdef HAVE_SETPGRP
		(doFileSave): ditto
	* image.c (openImgdisplay): delete #ifdef HAVE_SETPGRP
				use close_all_fds()
	* search.c (open_migemo): ditto

2002-11-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03466] Re: background download when external viewer
	* file.c (doExternal): UFclose(&uf);

2002-11-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03464] Re: case insensitive regexp search
	  (rewrite [w3m-dev 03462] by Hiroyuki Ito <hito@crl.go.jp>)
	* regex.c (matchWhich): add int
		(newRegex0): igncase
		(regmatch1): matchWhich with re->mode & RE_IGNCASE
		(matchWhich): add igncase

2002-11-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03459] background download when external viewer
	* etc.c (myExec): added
		(mySystem): rewrite to use myExec()
	* file.c (doExternal): run background if BackgroundExtViewer
	* proto.h (myExec): added

2002-11-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* doc/README.mouse_menu: delete column 10 limit
	* doc-jp/README.mouse_menu: ditto

2002-11-23  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03458] Re: mouse menu
	* display.c (displayBuffer): nTab2 -> nTab, mouse_menu
	* fm.h (nTab2): deleted
		(MouseMenuMap): added
		(MouseMenu): added
		(LIMIT_MOUSE_MENU): added
	* func.c (initMouseMenu): delete mouse_menu_map initialization
			conv_from_system
			mouse_menu->width
	* main.c (main): mouse_menu->in_action = FALSE
		(posTab): check mouse_menu
		(mouse_menu_action): add y arg
			mouse_menu_width check
		(process_mouse): nTab2 -> nTab, mouse_menu
		(nTabLine): deleted
		(calcTabPos): check mouse_menu
	* menu.c (mainMn): x, y
		(selMn): mouse_menu check